# protocol

./: .gitmodules  Makefile  build.bash  pgenie-protocol.cabal  stack.yaml  v1.openapi.yaml
.github/workflows/: cd.yaml
domain/: v1.domain.yaml
libs/main/: protocol.domain.yaml
libs/main/Pgenie/: Protocol.hs
test/: Main.hs
test/TestSuites/: Serialization.hs
