cabal-version:      3.0
name:               pgenie-protocol
version:            0.1
extra-source-files: domain/*.domain.yaml

common base-settings
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    NoMonomorphismRestriction
    ApplicativeDo
    Arrows
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    NoFieldSelectors
    OverloadedRecordDot

common executable-settings
  import:        base-settings
  ghc-options:   -O2 -threaded "-with-rtsopts=-N -I0 -qg"
  build-depends: pgenie-cli

library
  import:          base-settings
  hs-source-dirs:  library
  exposed-modules: Pgenie.Protocol
  build-depends:
    , coalmine
    , domain
    , domain-aeson
    , domain-cereal
    , domain-optics
    , generic-arbitrary
    , optics
    , QuickCheck
    , rerebase

test-suite test
  import:         base-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:  TestSuites.Serialization
  build-depends:
    , cereal
    , coalmine
    , pgenie-protocol
    , rerebase
